--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <script>
         $(document).ready(function(){
             $(".carousel-wrapper").owlCarousel({
-            
+                loop:true,
                 margin:10,
                 items:3,
                 dots:false,
